--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>45 Days JS coding challenge || TO-DO LIST PROJECT</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
-  <body></body>
+  <body>
+    <script src="todoScript.js" type="text/javascript"></script>
+  </body>
 </html>
