day 7 of 45 days javascript coding challenge / task manager project commit

--- a/task-manager.html
+++ b/task-manager.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>45 Days JS coding challenge || TO-DO LIST PROJECT</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <title>45 Days JS coding challenge || TASK MANAGER PROJECT</title>
+    <link rel="stylesheet" href="task-manager.css" type="text/css" />
   </head>
   <body>
     <div id="todoListContainer">
@@ -30,6 +30,6 @@
         <ul class="taskUl"></ul>
       </div>
     </div>
-    <script src="todoScript.js" type="text/javascript"></script>
+    <script src="task-manager.js" type="text/javascript"></script>
   </body>
 </html>
